[package]
name = "libatk-derive"
version = "0.1.7"
edition = "2021"
description = "Macro implementation for #[derive(CommandDescriptor)]"
homepage = "https://github.com/cyberphantom52/libatk-rs/"
repository = "https://github.com/cyberphantom52/libatk-rs/"
readme = "README.md"
license-file = "LICENSE"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.98", features = ["full"] }
